# LocalScribe

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
scripts/: fetch-llama.ps1  fetch-llama.sh  fetch-whisper.ps1  fetch-whisper.sh
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/llama/: placeholder.txt
src-tauri/binaries/whisper/: placeholder.txt
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  db.rs  lib.rs  llm.rs  record.rs  storage.rs  whisper.rs
src/components/: AiPanel.tsx  ExportMenu.tsx  HomeView.tsx  ModelsModal.tsx  PlayerBar.tsx  RecordCard.tsx  SegmentList.tsx  SettingsModal.tsx  Sidebar.tsx  Toasts.tsx  TopBar.tsx  TranscriptView.tsx
src/lib/: ai.ts  backend.ts  bytes.ts  chunk.ts  i18n.ts  srt.ts  time.ts  types.ts
src/lib/__tests__/: bytes.test.ts  chunk.test.ts  srt.test.ts  time.test.ts
src/state/: airuntime.ts  store.ts  ui.ts
