[package]
name = "localscribe"
version = "0.5.1"
description = "LocalScribe — transcrição de áudio 100% offline (whisper.cpp), com IA local"
authors = ["Taylor"]
edition = "2021"
license = "MIT"
repository = "https://github.com/Anon5T4R/LocalScribe"

[lib]
# O sufixo `_lib` evita conflito entre o nome da lib e o do binário no Windows
# (https://github.com/rust-lang/cargo/issues/8519).
name = "localscribe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# protocol-asset: o player toca o WAV convertido via asset protocol.
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Biblioteca de transcrições em app_data (transcript não é "arquivo próprio").
rusqlite = { version = "0.32", features = ["bundled"] }
# Decodificação de áudio em Rust puro (mp3/m4a-aac/ogg/flac/wav) — sem ffmpeg,
# como decidido no plano da suíte. O que não abrir aqui (ex.: opus) recebe
# mensagem honesta apontando o LocalMedia.
symphonia = { version = "0.5", features = ["mp3", "aac", "isomp4"] }
# Resample pra 16 kHz mono (o formato que o whisper espera).
rubato = "0.15"
hound = "3"
# Gravação de microfone.
cpal = "0.15"
# Download dos modelos ggml (Hugging Face) com verificação de integridade.
ureq = "2"
sha1 = "0.10"
# Token opcional do Hugging Face no cofre do SO (mesmo padrão do TaylorHub).
keyring = { version = "3", features = ["windows-native", "apple-native", "sync-secret-service"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
